@startuml

class Application {
  String id
  String name
  String title
  String description
  String official_website
  String install_number
  String version
  String icon
  String head_image
  String visible
  String deletable
  String is_official
  String images
  Number sort
  String api_route
  String admin_route
  Date create_time
  String application_category_id

  String key union
}

class ApplicationMenus {
  id
  application_id
  name
  icon
  link
  type (customer | page)
  page_id

  String key union
}

class Page {
  String id
  String type (PC | Mobile)
  String title
  String direction (column | row)

  String key union
}

class PageSection {
  String id
  String title
  String entity_id
  String page_id
  String type (page | tab | details | form | search | html | buttons | search_buttons | number)
  String html_content
}

class PageSectionTab {
  String id
  String title
  String parent_page_section_id
  String children_page_section_id
  String entity_id
}

class PageSectionButton {
  String id
  String page_section_id
  String button_id
}

class Button {
  String id
  String application_section_id
  String name
  String type (edit | delete | details | add | link | action)
}

class Entity {
  String id
  String table_name union
  String data_type (db_table | analysis | sql)
  String sql
}

note top of Entity
  <b>字典数据</b>
  - data_type: 数据类型
    - db_table: 从 db_table 字段的数据表中查询
    - detach: 使用 Entity_field 的 sql 字段进行查询
    - sql: 使用 sql 字段的 SQL 进行查询
  <i>this</i> one.
end note

class EntityField {
  String id
  String is_primary
  String entity_id
  String key
  String name
  String data_type (no. | string | number | rice_text | date | date_down | price | enum | data_dict)
  String display_type (auto | customer)
  String type (value | buttons)
  Number sort
  String sql
  Boolean exists_list
  Boolean exists_details
  Boolean exists_modify

  Boolean has_go_details
  Boolean has_sort
  Boolean has_search
}

note top of EntityField
  <b>字典数据</b>
  - data_type: 数据类型
    - db_table: 从 db_table 字段的数据表中查询
    - detach: 使用 Entity_field 的 sql 字段进行查询
    - sql: 使用 sql 字段的 SQL 进行查询
  <i>this</i> one.
end note

class EntityFieldButton {
  String id
  String EntityFieldId
  String button_id
}

Application "1" <|-- "N" ApplicationMenus
ApplicationMenus "1" <|-- "1" Page
Page "1" <|-- "N" PageSection
PageSection "1" <|-- "1" Page
PageSection "1" <|-- "N" PageSectionButton
PageSectionButton "1" <|-- "1" Button
PageSection "1" <|-- "N" PageSectionTab
PageSection "1" <|-- "1" Entity
Entity "1" <|-- "1" EntityField
EntityField "1" <|-- "1" EntityFieldButton
EntityFieldButton "1" <|-- "1" Button

@enduml
